# reMID.lv2

./: CMakeLists.txt  README  TODO
gui/: CMakeLists.txt  test_ui.cxx  test_ui.hxx
gui/avtk/: CMakeLists.txt  avtk.hxx
instruments/: bass_big0c.conf  blank.conf  bubbley.conf  digital_spill.conf  drumkit.conf  fallingAngel.conf  instruments.conf  octave_siren.conf  organ.conf  paddy.conf  piano.conf  pulsething.conf  riser.conf  saw2sqr.conf  saws.conf  sqr2saw.conf  subsynth.conf
lib/: CMakeLists.txt  Makefile
src/: CMakeLists.txt  alsa_midi.c  alsa_midi.h  audio.c  gui.c  gui.h  jack_audio.c  jack_audio.h  jack_midi.c  jack_midi.h  lv2_audio.h  lv2_midi.c  lv2_midi.h  manifest.ttl  midi.c  midi.h  port_midi.c  prefs.c  prefs.h  reMID.c  reMID_lv2.c  remid.ttl  sid_chips.cc  sid_chips.h  sid_instr.h
